2010-02-27 [colin]	3.7.5cvs26

	* configure.ac
	* AUTHORS
	* src/gtk/authors.h
	* manual/Makefile.am
	* manual/de/Makefile.am
	* manual/de/account.xml
	* manual/de/ack.xml
	* manual/de/addrbook.xml
	* manual/de/advanced.xml
	* manual/de/claws-mail-manual.xml
	* manual/de/faq.xml
	* manual/de/glossary.xml
	* manual/de/gpl.xml
	* manual/de/handling.xml
	* manual/de/intro.xml
	* manual/de/keyboard.xml
	* manual/de/plugins.xml
	* manual/de/starting.xml
	* manual/de/dist/.cvsignore
	* manual/de/dist/Makefile.am
	* manual/de/dist/html/.cvsignore
	* manual/de/dist/html/Makefile.am
	* manual/de/dist/pdf/.cvsignore
	* manual/de/dist/pdf/Makefile.am
	* manual/de/dist/ps/.cvsignore
	* manual/de/dist/ps/Makefile.am
	* manual/de/dist/txt/.cvsignore
	* manual/de/dist/txt/Makefile.am
		Add the german translation of the manual, done by
		Volker Ribbert <thoraki@arcor.de>.

2010-02-27 [holger]	3.7.5cvs25

	* src/prefs_toolbar.c
		Don't make toolbar item description for
		plugin registered items editable

2010-02-26 [colin]	3.7.5cvs24

	* src/toolbar.c
		Don't translate empty description

2010-02-22 [colin]	3.7.5cvs23

	* src/compose.c
		Don't make In-Reply-To visible when reediting
		a draft or sent mail.

2010-02-20 [colin]	3.7.5cvs22

	* src/imap.c
	* src/imap.h
	* src/main.c
	* src/mainwindow.c
	* src/etpan/imap-thread.c
	* src/etpan/imap-thread.h
	* src/etpan/nntp-thread.c
	* src/etpan/nntp-thread.h
		When going offline from NetworkManager, just
		delete IMAP connections. That'll avoid timeouts
		when coming back online in certain cases when
		the TCP socket will have timed out.

2010-02-20 [holger]	3.7.5cvs21

	* .cvsignore
		More files to ignore

2010-02-17 [ticho]	3.7.5cvs20

	* src/summaryview.c
	* src/summaryview.h
	* src/toolbar.c
		Revert 3.7.5cvs19.

2010-02-16 [ticho]	3.7.5cvs19

	* src/summaryview.c
	* src/summaryview.h
	* src/toolbar.c
		Removed unused argument from summary_open_row().

2010-02-10 [pawel]	3.7.5cvs18

	* src/compose.c