@@ -3967,3 +3967,4 @@
 ( cvs diff -u -r 1.43.2.115 -r 1.43.2.116 src/toolbar.c;  ) > 3.7.5cvs24.patchset
 ( cvs diff -u -r 1.30.2.60 -r 1.30.2.61 src/prefs_toolbar.c;  ) > 3.7.5cvs25.patchset
 ( cvs diff -u -r 1.654.2.4038 -r 1.654.2.4039 configure.ac;  cvs diff -u -r 1.100.2.73 -r 1.100.2.74 AUTHORS;  cvs diff -u -r 1.1.2.65 -r 1.1.2.66 src/gtk/authors.h;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 manual/Makefile.am;  diff -u /dev/null manual/de/Makefile.am;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 manual/de/account.xml;  diff -u /dev/null manual/de/ack.xml;  diff -u /dev/null manual/de/addrbook.xml;  diff -u /dev/null manual/de/advanced.xml;  diff -u /dev/null manual/de/claws-mail-manual.xml;  diff -u /dev/null manual/de/faq.xml;  diff -u /dev/null manual/de/glossary.xml;  diff -u /dev/null manual/de/gpl.xml;  diff -u /dev/null manual/de/handling.xml;  diff -u /dev/null manual/de/intro.xml;  diff -u /dev/null manual/de/keyboard.xml;  diff -u /dev/null manual/de/plugins.xml;  diff -u /dev/null manual/de/starting.xml;  diff -u /dev/null manual/de/dist/.cvsignore;  diff -u /dev/null manual/de/dist/Makefile.am;  diff -u /dev/null manual/de/dist/html/.cvsignore;  diff -u /dev/null manual/de/dist/html/Makefile.am;  diff -u /dev/null manual/de/dist/pdf/.cvsignore;  diff -u /dev/null manual/de/dist/pdf/Makefile.am;  diff -u /dev/null manual/de/dist/ps/.cvsignore;  diff -u /dev/null manual/de/dist/ps/Makefile.am;  diff -u /dev/null manual/de/dist/txt/.cvsignore;  diff -u /dev/null manual/de/dist/txt/Makefile.am;  ) > 3.7.5cvs26.patchset
+( cvs diff -u -r 1.5.2.14 -r 1.5.2.15 src/common/plugin.h;  cvs diff -u -r 1.13.2.37 -r 1.13.2.38 src/common/plugin.c;  ) > 3.7.5cvs27.patchset
